force-app/main/default/objects/Review__c/fields/Rating_Research__c.field-meta.xml
<CustomField>
    <fullName>Rating_Research__c</fullName>
    <inlineHelpText>Choose between 1 and 5</inlineHelpText>
    <label>Rating - Research</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>