force-app/main/default/objects/Review__c/validationRules/Rating3_between_1_and_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Rating3_between_1_and_5</fullName>
    <active>true</active>
    <errorConditionFormula>Rating_Writing_Style__c &lt; 1 ||
	 Rating_Writing_Style__c &gt;5</errorConditionFormula>
    <errorDisplayField>Rating_Writing_Style__c</errorDisplayField>
    <errorMessage>Rating should be between 1 and 5</errorMessage>
</ValidationRule>